--- a/carpovici-site/package.json
+++ b/carpovici-site/package.json
@@ -10,9 +10,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.0.2",
+    "preact": "^10.5.14",
+    "preact-particles": "^1.31.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.5.3",
     "react-scripts": "4.0.3",
+    "react-typed": "^1.2.0",
     "sass": "^1.35.2",
     "web-vitals": "^1.1.2"
   },
